--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-cheerio": "^0.6.2",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
     "gulp-ejs": "^3.0.1",
     "gulp-less": "^3.3.0",
     "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^2.1.2",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.1.2"
   }
 }
